# spaced

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  crontab  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  supervisord.conf
.github/: dependabot.yml
.github/workflows/: ci.yml
cards/: achievements.py  admin.py  cloze.py  context_processors.py  email.py  forms.py  models.py  srs.py  tests.py  urls.py
cards/management/commands/: send_inactivity_nudges.py  send_reminders.py  send_streak_reminders.py  (+2 more)
cards/migrations/: 0001_initial.py  0002_userpreferences.py  0003_userpreferences_card_text_size.py  0004_alter_userpreferences_card_text_size.py  0005_emailverificationtoken.py  0006_add_email_preferences.py  0007_commandexecutionlog.py  0008_add_has_been_reviewed.py  0009_add_typein_card_type.py  0010_add_celebration_animations.py  0011_userpreferences_user_timezone.py  0012_anki_style_card_limits.py
cards/views/: __init__.py  auth.py  card.py  dashboard.py  deck.py  email.py  health.py  helpers.py  landing.py  review.py  settings.py
config/: settings.py
static/: site.webmanifest
static/css/: landing.css  main.css  review.css
static/js/: app.js  dashboard.js  review.js  settings.js
templates/: base.html
templates/emails/: achievement.html  achievement.txt  base.html  base.txt  inactivity_nudge.html  inactivity_nudge.txt  streak_reminder.html  streak_reminder.txt  study_reminder.html  study_reminder.txt  verification.html  verification.txt  weekly_stats.html  weekly_stats.txt
(+24 files in other folders)
