[project]
name = "flashcard"
version = "0.1.0"
description = "Spaced repetition flashcard application with SM-2 algorithm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "django>=5.2.9",
    "django-environ>=0.12.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "tzdata>=2025.2",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
]
